--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:=3000}",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,10 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.6.4"
   }
 }
